--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
-    "nodemailer": "^6.6.2"
+    "nodemailer": "^6.6.2",
+    "slugify": "^1.6.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
