--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "material-ui-search-bar": "^1.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
