--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "google-auth-library": "^8.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
